syntax = "proto3";

package com.customer.grpc;
option java_package = "com.customer.grpc";
option java_multiple_files = true;

service CustomerService {
  rpc getCustomerByEmail (CustomerRequestMessage) returns (CustomerResponseMessage);
}


message CustomerResponseMessage {
    int32 id = 1;
    string name = 2;
    string email = 3;
    string flightNumber = 4;
}

message CustomerRequestMessage {
  string customerEmail = 1;
}
